--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Oct 28 02:30:20 ALMT 2019
+#Mon Oct 28 23:32:24 ALMT 2019
 ndk.dir=/Users/ravi/Library/Android/sdk/ndk-bundle
-sdk.dir=C\:\\Users\\azire\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\Jenish\\AppData\\Local\\Android\\Sdk
